force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <description>Enable Escalation Management Team (EMT) Reporting within Salesforce Lightning:
CS21-1378 by Aidan : Change the View/Edit option to custom object/rich text for each update, so the text being entered would have features to modify text with Bold, colour, font etc.</description>
    <label>Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>