force-app/main/default/objects/Note__c/fields/Action_Items_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_Notes__c</fullName>
    <label>Action Items(s) / Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>