force-app/main/default/objects/Note__c/fields/Area_Of_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Area_Of_Improvement__c</fullName>
    <label>Area Of Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>