force-app/main/default/objects/Note__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation</label>
    <referenceTo>Escalation__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>