force-app/main/default/objects/Note__c/fields/isDraft__c.field-meta.xml
<CustomField>
    <fullName>isDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDraft</label>
    <type>Checkbox</type>
</CustomField>