force-app/main/default/objects/Note__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessons Learned</label>
    <referenceTo>Lessons_Learned__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>