force-app/main/default/objects/Note__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Lessons Learned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>