force-app/main/default/objects/Note__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ransomware_Next_Steps</fullName>
                <label>Ransomware Next Steps</label>
            </value>
            <value>
                <fullName>Escalation_Issue_Summary</fullName>
                <label>Escalation Issue Summary</label>
            </value>
            <value>
                <fullName>LL_Background_Timeline</fullName>
                <label>LL Background &amp; Timeline</label>
            </value>
            <value>
                <fullName>LL_Area_of_Improvement</fullName>
                <label>LL Area of Improvement</label>
            </value>
            <value>
                <fullName>Escalation_RRT_Questions_Feedback</fullName>
                <label>Escalation RRT Questions &amp; Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>