force-app/main/default/objects/Note__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>CS21-2011: Escalation Management Team (EMT) Salesforce Lightning, Granular Reporting within LL Escalation History Tracking</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>