force-app/main/default/objects/Note__c/validationRules/Due_Date_should_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_should_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date should be in future</errorMessage>
</ValidationRule>